--- a/src/pages/Product/style.css
+++ b/src/pages/Product/style.css
@@ -85,3 +85,40 @@
   gap: 10px;
   padding: 5px;
 }
+.keyFeaturesContainer {
+  width: 100%;
+  height: 100px;
+  background-color: #fff;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 10px;
+  overflow-y: scroll;
+}
+.featureItem {
+  background-color: var(--pink);
+  color: white;
+  display: inline-block;
+  padding: 8px 12px;
+  border-radius: 20px;
+}
+.featureInput {
+  border: none;
+  outline: none;
+  background: transparent;
+  font-size: 16px;
+}
+.featureClose {
+  height: 20px;
+  width: 20px;
+  background-color: rgb(255, 255, 255);
+  display: inline-flex;
+  border-radius: 50%;
+  text-align: center;
+  color: rgb(15, 15, 15);
+  align-items: center;
+  justify-content: center;
+  margin-left: 8px;
+  cursor: pointer;
+}
